update the style for chroma highlighting

--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -24,7 +24,7 @@
 
     {{ $t := now }}
     <link rel="stylesheet" href="/css/reset.css?t={{$t}}">
-    <link rel="stylesheet" href="/css/pygments.css?t={{$t}}">
+    <link rel="stylesheet" href="/css/chroma.css?t={{$t}}">
     <link rel="stylesheet" href="/css/main.css?t={{$t}}">
     {{range .Site.Params.extracssfiles}}
         <link rel="stylesheet" href="{{.}}?t={{$t}}">
@@ -33,7 +33,7 @@
 {{ else }}
 
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/pygments.css">
+    <link rel="stylesheet" href="/css/chroma.css">
     <link rel="stylesheet" href="/css/main.css">
     {{range .Site.Params.extracssfiles}}
         <link rel="stylesheet" href="{{.}}">
